fix(visual): stop scrollbar from moving the page

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,6 +1,7 @@
 /* Write your global styles here, in SCSS syntax. Variables and mixins from the src/variables.scss file are available here without importing */
 
 :root {
+    overflow-y: scroll;
     background-color: getColor(background);
     color: getColor(foreground);
     line-height: 1.5;
